chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    prometheus.io/port: "5000"
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 5000
