chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: Content-Type
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: http://localhost:9090/
spec:
  rules: 
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend: 
          service:
            name: service
            port:
              number: 5000
